# graphq-fastapi-server

./: README.md  main.py  pyproject.toml
